<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="50"
            android:text="@string/passenger_type_adult"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/main__ib_adultRemove"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="15dp"
            android:background="@null"
            android:onClick="decrement"
            android:scaleType="fitXY"
            android:src="@drawable/minus_icon" />

        <EditText
            android:id="@+id/main__tv_adultCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@null"
            android:focusable="false"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/_1"
            android:textSize="32sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/main__ib_adultAdd"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="15dp"
            android:background="@null"
            android:contentDescription="@string/adultcountincrement"
            android:onClick="increment"
            android:scaleType="fitXY"
            android:src="@drawable/plus_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="50"
            android:text="@string/passenger_type_child"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/main__ib_childRemove"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="15dp"
            android:background="@null"
            android:onClick="decrement"
            android:scaleType="fitXY"
            android:src="@drawable/minus_icon" />

        <EditText
            android:id="@+id/main__tv_childCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@null"
            android:focusable="false"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/_1"
            android:textSize="32sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/main__ib_childAdd"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="15dp"
            android:background="@null"
            android:contentDescription="@string/adultcountincrement"
            android:onClick="increment"
            android:scaleType="fitXY"
            android:src="@drawable/plus_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="50"
            android:text="@string/passenger_type_infant"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/main__ib_infantRemove"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="15dp"
            android:background="@null"
            android:onClick="decrement"
            android:scaleType="fitXY"
            android:src="@drawable/minus_icon" />

        <EditText
            android:id="@+id/main__tv_infantCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@null"
            android:focusable="false"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/_1"
            android:textSize="32sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/main__ib_infantAdd"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="15dp"
            android:background="@null"
            android:contentDescription="@string/adultcountincrement"
            android:onClick="increment"
            android:scaleType="fitXY"
            android:src="@drawable/plus_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray" />


</LinearLayout>